--- a/src/artedge_frontend/src/.ic-assets.json5
+++ b/src/artedge_frontend/src/.ic-assets.json5
@@ -25,7 +25,7 @@
             // - We added img-src data: because data: images are used often.
             // - frame-ancestors: none mitigates clickjacking attacks. See https://owasp.org/www-community/attacks/Clickjacking.
             //"Cache-Control": "no-store, no-cache, max-age=0, must-revalidate, proxy-revalidate",
-            "Content-Security-Policy": "default-src 'self';script-src 'self' 'unsafe-eval' 'unsafe-inline';connect-src 'self' https://icp0.io/api/v2/status https://icp0.io/api/v2/status https://*.ic0.app https://ic0.app https://icp0.io https://*.icp0.io;img-src 'self' data: https://source.unsplash.com/random?wallpapers;style-src * 'unsafe-inline';style-src-elem * 'unsafe-inline';font-src *;object-src 'none';base-uri 'self';frame-ancestors 'none';form-action 'self';upgrade-insecure-requests;",
+            "Content-Security-Policy": "default-src 'self';script-src 'self' 'unsafe-eval' 'unsafe-inline';connect-src 'self' https://icp0.io/api/v2/status https://icp0.io/api/v2/status https://*.ic0.app https://ic0.app https://icp0.io https://*.icp0.io;img-src * 'unsafe-inline''self' data:;style-src * 'unsafe-inline';style-src-elem * 'unsafe-inline';font-src *;object-src 'none';base-uri 'self';frame-ancestors 'none';form-action 'self';upgrade-insecure-requests;",
 
             // Security: The permissions policy disables all features for security reasons. If your site needs such permissions, activate them.
             // To configure permissions go here https://www.permissionspolicy.com/
@@ -41,7 +41,7 @@
 
             // Security: Tells the user’s browser that it must always use HTTPS with your site.
             // See: https://owasp.org/www-project-secure-headers/#http-strict-transport-security
-            "Strict-Transport-Security": "max-age=90; includeSubDomains",
+            "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
 
             // Security: Prevents the browser from interpreting files as a different MIME type to what is specified in the Content-Type header.
             // See: https://owasp.org/www-project-secure-headers/#x-content-type-options
