--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "artedge_frontend",
-  "version": "0.1.0",
-  "description": "Art Edge for artists and collectors",
+  "version": "0.2.0",
+  "description": "Internet Computer starter application",
   "keywords": [
     "Internet Computer",
     "Motoko",
@@ -10,54 +10,58 @@
   ],
   "scripts": {
     "build": "webpack",
-    "prebuild": "npm run generate",
+    "prebuild": "dfx generate",
     "start": "webpack serve --mode development --env development",
-    "prestart": "npm run generate",
+    "deploy:local": "dfx deploy --network=local",
+    "deploy:ic": "dfx deploy --network=ic",
     "generate": "dfx generate artedge_backend"
   },
+  "dependencies": {
+    "@dfinity/agent": "^0.20.2",
+    "@dfinity/assets": "^0.20.2",
+    "@dfinity/auth-client": "^0.20.2",
+    "@dfinity/candid": "^0.20.2",
+    "@dfinity/identity": "^0.20.2",
+    "@dfinity/principal": "^0.20.2",
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@fontsource/roboto": "^5.0.8",
+    "@mui/icons-material": "^5.15.4",
+    "@mui/material": "^5.15.4",
+    "css-loader": "^6.9.0",
+    "react": "^18.2.0",
+    "react-copy-to-clipboard": "^5.1.0",
+    "react-dom": "^18.2.0",
+    "react-loader-spinner": "^6.1.6",
+    "react-masonry": "^1.0.7",
+    "react-masonry-css": "^1.0.16",
+    "style-loader": "^3.3.4",
+    "ts-loader": "^9.5.1",
+    "wouter": "^2.12.1"
+  },
   "devDependencies": {
-    "@dfinity/agent": "0.19.3",
-    "@dfinity/auth-client": "^0.19.3",
-    "@dfinity/candid": "0.19.3",
-    "@dfinity/identity": "^0.19.3",
-    "@dfinity/principal": "0.19.3",
-    "@dfinity/assets": "0.19.3",
     "assert": "2.0.0",
     "buffer": "6.0.3",
     "copy-webpack-plugin": "^11.0.0",
-    "css-loader": "^6.8.1",
+    "dotenv": "^16.0.3",
     "events": "3.3.0",
     "html-webpack-plugin": "5.5.0",
     "process": "0.11.10",
     "stream-browserify": "3.0.0",
-    "style-loader": "^3.3.3",
     "terser-webpack-plugin": "^5.3.3",
-    "ts-loader": "^9.5.0",
-    "typescript": "^5.2.2",
     "util": "0.12.4",
     "webpack": "^5.73.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.8.1"
   },
   "engines": {
-    "node": "^12 || ^14 || ^16 || ^18"
+    "node": "^12 || ^14 || ^16 || >=17",
+    "npm": "^7.17 || >=8"
   },
   "browserslist": [
     "last 2 chrome version",
     "last 2 firefox version",
     "last 2 safari version",
     "last 2 edge version"
-  ],
-  "dependencies": {
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
-    "@fontsource/roboto": "^5.0.8",
-    "@mui/icons-material": "^5.14.16",
-    "@mui/material": "^5.14.17",
-    "@types/react-dom": "^18.2.15",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-masonry-css": "^1.0.16",
-    "wouter": "^2.12.1"
-  }
+  ]
 }
